@@ -410,39 +410,18 @@ void RuleRegister(Rule * rule)
 
 static Bool ArgMatch(RuleArg * pattern, Var * arg);
 
-Bool VarMatchesType(Var * var, RuleArg * pattern)
+Bool VarMatchesType(Var * var, Type * type)
 {
-	Type * type = pattern->type;
 	Type * vtype = var->type;
 
-	// Pattern expects reference to array with one or more indeces
-	if (pattern->index != NULL) {
-		if (var->mode == MODE_ELEMENT) {
-			if (VarIsStructElement(var)) {
-				// This is reference to structure
-				// We may treat it as normal variable
-				printf("");
-			} else {
-				if (!ArgMatch(pattern->index, var->var)) return false;
-				//TODO: Match type of array item (we suppose byte not)
-				return true;
-			}
-		} else {
-			return false;
-		}
-
-	// Pattern does not expect any index, but we have some
-	} else {
-		if (VarIsArrayElement(var)) return false;
-	}
-
 	if (type == vtype) return true;
-
 	// If pattern has no defined type, it fits
 	if (type == NULL) return true;
 
+	if (type->variant == TYPE_VARIANT) {
+		return VarMatchesType(var, type->dim[0]) || VarMatchesType(var, type->dim[1]);
 
-	if (type->variant == TYPE_INT) {
+	} else if (type->variant == TYPE_INT) {
 		if (vtype != NULL) {
 			// If variable is constant, the check is different
 			if (var->mode == MODE_CONST) {
@@ -489,6 +468,89 @@ Bool VarMatchesType(Var * var, RuleArg * pattern)
 	return true;
 }
 
+Bool VarMatchesPattern(Var * var, RuleArg * pattern)
+{
+	Type * type = pattern->type;
+	Type * vtype = var->type;
+
+	// Pattern expects reference to array with one or more indices
+	if (pattern->index != NULL) {
+		if (var->mode == MODE_ELEMENT) {
+			if (VarIsStructElement(var)) {
+				// This is reference to structure
+				// We may treat it as normal variable
+//				printf("");
+			} else {
+				if (!ArgMatch(pattern->index, var->var)) return false;
+				//TODO: Match type of array item (we suppose byte not)
+				return true;
+			}
+		} else {
+			return false;
+		}
+
+	// Pattern does not expect any index, but we have some
+	} else {
+		if (VarIsArrayElement(var)) return false;
+	}
+
+	return VarMatchesType(var, type);
+/*
+	if (type == vtype) return true;
+
+	// If pattern has no defined type, it fits
+	if (type == NULL) return true;
+
+	if (type->variant == TYPE_VARIANT) {
+
+	} else if (type->variant == TYPE_INT) {
+		if (vtype != NULL) {
+			// If variable is constant, the check is different
+			if (var->mode == MODE_CONST) {
+				if (vtype->variant == TYPE_INT) {
+					if (var->n < type->range.min) return false;
+					if (var->n > type->range.max) return false;
+				}
+			} else if (var->mode == MODE_ELEMENT) {
+				// Specified variable is element, but the type is not array
+				if (type->variant != TYPE_ARRAY) return false;
+			} else {
+				if (vtype->variant != TYPE_INT) return false;
+				if (type->range.max < vtype->range.max) return false;
+				if (type->range.min > vtype->range.min) return false;
+			}
+		}
+	} else if (type->variant == TYPE_ARRAY) {
+		if (vtype == NULL) return false;
+		if (vtype->variant != TYPE_ARRAY) return false;
+
+		// Match first index, second index, return type
+
+		return TypeIsSubsetOf(vtype->dim[0], type->dim[0])
+			&& TypeIsSubsetOf(vtype->dim[1], type->dim[1])
+			&& TypeIsSubsetOf(vtype->element, type->element);
+		
+	} else if (type->variant == TYPE_ADR) {
+		if (vtype != NULL) {
+			if (vtype->variant != TYPE_ADR) return false;
+		}
+	} else if (type->variant == TYPE_PROC) {
+
+		// Interrupt routines types will be based on some other type
+		if (vtype->base == NULL && type->base == NULL) return true;
+
+		// Procedure type is only same, if it is exactly the same
+		return false;
+
+	} else if (type->variant == TYPE_STRUCT) {
+		if (vtype != NULL) {
+			if (vtype->variant != TYPE_STRUCT) return false;
+		}
+	}
+	return true;
+*/
+}
+
 static Bool ArgMatch(RuleArg * pattern, Var * arg)
 {
 	Type * atype;
@@ -501,7 +563,7 @@ static Bool ArgMatch(RuleArg * pattern, Var * arg)
 	switch(pattern->variant) {
 	case RULE_CONST:	// var
 		if (!VarIsConst(arg)) return false;
-		if (!VarMatchesType(arg, pattern)) return false;
+		if (!VarMatchesPattern(arg, pattern)) return false;
 		break;
 
 	case RULE_VALUE:
@@ -529,19 +591,19 @@ static Bool ArgMatch(RuleArg * pattern, Var * arg)
 	case RULE_VARIABLE:
 		if (arg->mode == MODE_CONST) return false;
 		if (FlagOn(arg->submode, SUBMODE_REG)) return false; 
-		if (!VarMatchesType(arg, pattern)) return false;
+		if (!VarMatchesPattern(arg, pattern)) return false;
 		break;
 	
 	case RULE_DEREF:
 		if (arg->mode == MODE_CONST) return false;
 		if (FlagOff(arg->submode, SUBMODE_REF)) return false;
-		if (!VarMatchesType(arg, pattern)) return false;
+		if (!VarMatchesPattern(arg, pattern)) return false;
 		break;
 
 	case RULE_ARG:
 		if (FlagOn(arg->submode, SUBMODE_REG)) return false; 
 		if (FlagOn(arg->submode, SUBMODE_REF)) return false;
-		if (!VarMatchesType(arg, pattern)) return false;
+		if (!VarMatchesPattern(arg, pattern)) return false;
 		break;
 
 	case RULE_ANY:
