@@ -29,6 +29,8 @@ type
    word:0..65535
    card:0..65535
    long:0..$ffffff
+   sbyte:-128..127
+   byte1:byte or sbyte
    byte2:0..65535
    
 ;   ptr:0..65535     ;ptr defines size of pointer and memory limits
@@ -47,6 +49,7 @@ rule alloc %A:byte                               = "   .ds 1"
 rule alloc %A:card                               = "   .ds 2"
 rule alloc %A:long                               = "   .ds 3"
 rule alloc %A:adr                                = "   .ds 2"
+rule alloc %A:-128..127                          = "   .ds 1"
 
 ;========================
 ;Temporary variables
@@ -107,6 +110,12 @@ _TEMPL1@$70:CARD		;Should be: 0..$7fffffff
 ;*********** Let
 
 rule let %A:byte, %B:byte = instr
+  let _a,%B
+  let %A,_a
+
+;signed byte assignment
+;We cannot use byte1 to define this, as we do not allow assigning from signed to unsigned and vice versa
+rule let %A:sbyte, %B:sbyte = instr
   let _a,%B
   let %A,_a
   
@@ -329,7 +338,7 @@ rule hi _y, %A     =  "   ldy %A+1"
 
 ;*********** Add
 
-rule add %A:byte, %B:byte, %C:byte = instr
+rule add %A:byte1, %B:byte1, %C:byte1 = instr
   let _a,%B 
   let _c,0
   add _a,_a,%C
@@ -430,17 +439,17 @@ rule add %A:long,%A:long,1 = instr
   
 rule add _x,_x,1 = "   inx"
 rule add _y,_y,1 = "   iny"
-rule add _a,_a,const %A:byte  = "   adc #%A"
-rule add _a,_a,%A:byte = "   adc %A"
-rule add _a,_a, %A:byte(_x) =  "   adc %A,x"
+rule add _a,_a,const %A:byte1  = "   adc #%A"
+rule add _a,_a,%A:byte1 = "   adc %A"
+rule add _a,_a, %A:byte1(_x) =  "   adc %A,x"
 rule add _a,_a,%A(const %B) = "   adc %A+%B"
 
-rule add %A:byte,%A,1 = "   inc %A"
+rule add %A:byte1,%A,1 = "   inc %A"
 rule add %A:byte(const %B), %A(%B), 1 = "   inc %A+%B"
 
 ;*********** Sub
 
-rule sub %A:byte, %B:byte, %C:byte = instr
+rule sub %A:byte1, %B:byte1, %C:byte1 = instr
   let _a,%B
   let _c,1
   sub _a,_a,%C
@@ -1461,8 +1470,8 @@ rule let _y,%A:byte(_x)       = "   ldy %A,x"
 
 ;LDA
 
-rule let _a,const %A:byte    = "   lda #%A"
-rule let _a,%A:byte     = "   lda %A"
+rule let _a,const %A:byte1    = "   lda #%A"
+rule let _a,%A:byte1     = "   lda %A"
 
 rule let _a, %A:byte(0)  = "   lda %A"       ;would be handled by next rule but we do not want +0 there
 rule let _a,%A:byte(const %B)  = "   lda %A+%B"
@@ -1472,7 +1481,7 @@ rule let _a, @%A(_y)  = "   lda (%A),y"
 
 ;STA
 
-rule let %A:byte,_a  = "   sta %A"
+rule let %A:byte1,_a  = "   sta %A"
 rule let %A:byte(0),_a  = "   sta %A"       ;would be handled by next rule but we do not want +0 there
 rule let %A:card(0),_a  = "   sta %A"       ;would be handled by next rule but we do not want +0 there
 rule let %A:card(1),_a  = "   sta %A+1"       ;would be handled by next rule but we do not want +0 there
@@ -1531,12 +1540,12 @@ rule rol %A:byte(1),%A:byte(1),1 = "   rol %A+1"
 
 ;SBC, DEX, DEY, DEC
 
-rule sub _a,_a,const %A:byte  = "   sbc #%A"
-rule sub _a,_a,%A:byte = "   sbc %A"
+rule sub _a,_a,const %A:byte1  = "   sbc #%A"
+rule sub _a,_a,%A:byte1 = "   sbc %A"
 rule sub _x,_x,1 = "   dex"
 rule sub _y,_y,1 = "   dey"
 
-rule sub %A:byte,%A,1 = "   dec %A"
+rule sub %A:byte1,%A,1 = "   dec %A"
 
 rule sub %A(const %B), %A(%B), 1 = "   dec %A+%B"
 
@@ -1582,6 +1591,10 @@ rule var_arg ,%A:byte   = "   dta b(129),a(%A)"
 rule var_arg ,%A:card   = "   dta b(130),a(%A)"
 rule var_arg ,%A:adr    = "   dta b(130),a(%A)"
 rule var_arg ,%A:long   = "   dta b(131),a(%A)"
+
+rule var_arg, %A:sbyte  = "   dta b(129+32), a(%A)"
+
+
 rule data ,%A    = "   dta b(%A)"
 rule align ,%A    = "   .align %A"
 rule file ,%A     = "   ins '%A'"
